# drizz-farm

./: .gitignore  .golangci.yml  .goreleaser.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh  main.go
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-13T11-26-04-669Z.yml
ci/: drizz-farm-session.sh
ci/github-actions/: android-test.yml  parallel-test.yml
ci/gitlab-ci/: android-test.yml
clients/java/: README.md  pom.xml
clients/python/: README.md  pyproject.toml
clients/python/drizz_farm/: __init__.py  client.py  pytest_plugin.py
cmd/: activate.go  create.go  daemon.go  discover.go  join.go  prereqs.go  root.go  session.go  setup.go  start.go  status.go  stop.go  version.go
docs/: APPIUM-MIGRATION.md
examples/: GoogleSearchTest.java  README.md  google_chrome_deep_test.py  google_search_test.py
internal/android/: adb.go  android_test.go  avd.go  emulator.go  emulator_device.go  exec.go  port.go  running_device.go  sdk.go  usb_device.go  usb_scanner.go
internal/api/: api_test.go  (+22 more)
mcp/: package-lock.json  package.json  tsconfig.json
scripts/: install.sh  run-parallel.sh  run-test.sh
server/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
site/: README.md  _redirects  index.html
tests/: api_new_test.go  api_test.go  capabilities_test.go  e2e_device_features_test.go  e2e_test.go  helpers_test.go  lifecycle_test.go  pool_test.go  session_test.go  sprint34_test.go  sqlite_test.go
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+185 files in other folders)
